@@ -349,7 +349,7 @@ public class PNMImageParser extends ImageParser implements PNMConstants
 	 *            File containing image data.
 	 * @param params
 	 *            Map of optional parameters, defined in SanselanConstants.
-	 * @return Xmp Xml as String, if present. Otherwise, returns null..
+	 * @return Xmp Xml as String, if present. Otherwise, returns null.
 	 */
 	public String getXmpXml(ByteSource byteSource, Map params)
 			throws ImageReadException, IOException
